<resources>

    <string name="app_name">GamersHub</string>
    <string name="title_home">Home</string>
    <string name="title_pinned">Pinned Games</string>
    <string name="title_search">Search</string>
    <string name="title_gameTrade">Game Trader</string>
    <string name="title_settings">Settings</string>

    <string name="removePinBtnText">Unpin this game</string>
    <string name="addPinBtnText">Pin this game</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- ALL CURRENT STRINGS FOR THE SEARCH METHODS -->

    <!-- working-->
    <string name="search_trendingGames">fields name,popularity,cover.*,platforms,rating,aggregated_rating,total_rating,summary,url,screenshots.*,release_dates.human,storyline,updated_at,created_at; where rating_count &gt; 225; sort rating desc; limit 25;</string>
    <string name="update_allGames">fields name,popularity,cover.*,platforms,rating,aggregated_rating,total_rating,summary,url,screenshots.*,release_dates.human,storyline,updated_at,created_at;</string>
    <string name="search_screenShotTable">fields alpha_channel,animated,game,height,image_id,url,width; where game =</string>
    <string name="search_upcomingGames">fields *; where date &gt; 1553467746; sort date asc; limit 25;</string>
    <string name="search_pinnedGamesScreen"> fields name,popularity,cover.*,platforms,rating,aggregated_rating,total_rating,summary,url,screenshots.*,release_dates.human,storyline,updated_at,created_at;</string>


    <!-- not used-->
    <string name="search_upcomingGamesPS4">fields id,game,human,m,platform; where platform = 48 &amp; date &gt; 1552916822; sort date asc; limit 20;</string>
    <string name="search_upcomingGamesPC">fields id,game,human,m,platform; where platform = 49 &amp; date &gt; 1552916822;</string>
    <string name="search_upcomingGamesXBOX">fields id,game,human,m,platform; where platform = 6 &amp; date &gt; 1552862789;</string>
    <string name="search_recentlyReleasedPS4games">fields id,game,human,m,platform; where platform = 48 &amp; date &lt; 1552916822; sort date asc; limit 15;</string>


    <!-- ERROR messages to be displayed if content is null -->
    <string name="gameDoesNotHaveSummary">Does not have a summary available!</string>
    <string name="title_activity_settings">Settings</string>








    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>


    <!-- CREATE LIB INFO FOR 'FASTANDROIDNETWORKING'-->

    <string name="define_FastAndroidNetworking"></string>
    <string name="library_FastAndroidNetworking_author">Amit Shekhar</string>
    <string name="library_FastAndroidNetworking_authorWebsite"></string>
    <string name="library_FastAndroidNetworking_libraryName">Fast Android Networking</string>
    <string name="library_FastAndroidNetworking_libraryDescription">Fast Android Networking Library is a powerful library for doing any type of networking in Android applications which is made on top of OkHttp Networking Layer.</string>
    <string name="library_FastAndroidNetworking_libraryVersion">1.0.2</string>
    <string name="library_FastAndroidNetworking_libraryWebsite">https://github.com/amitshekhariitbhu/Fast-Android-Networking</string>
    <!-- Possible values right now: apache_2_0, mit, bsd_2, bsd_3 -->
    <string name="library_FastAndroidNetworking_licenseId">apache_2_0</string>
    <!-- you still can define the license within your library definition, but it is recommend to use the id -->
    <!-- possible fields for a custom license: *_licenseVersion, *_licenseLink, *_licenseContent -->
    <string name="library_FastAndroidNetworking_isOpenSource">true</string>
    <string name="library_FastAndroidNetworking_repositoryLink">https://github.com/amitshekhariitbhu/Fast-Android-Networking</string>



    <!-- CREATE LIB INFO FOR 'dotsindicator'-->

    <string name="define_dotsindicator"></string>
    <string name="library_dotsindicator_author">Tommy Buonomo</string>
    <string name="library_dotsindicator_authorWebsite"></string>
    <string name="library_dotsindicator_libraryName">DotsIndicator</string>
    <string name="library_dotsindicator_libraryDescription">This library makes it possible to represent View Pager Dots Indicator with 3 different awesome styles !</string>
    <string name="library_dotsindicator_libraryVersion">3.0.3</string>
    <string name="library_dotsindicator_libraryWebsite">https://github.com/tommybuonomo/dotsindicator</string>
    <!-- Possible values right now: apache_2_0, mit, bsd_2, bsd_3 -->
    <string name="library_dotsindicator_licenseId">apache_2_0</string>
    <!-- you still can define the license within your library definition, but it is recommend to use the id -->
    <!-- possible fields for a custom license: *_licenseVersion, *_licenseLink, *_licenseContent -->
    <string name="library_dotsindicator_isOpenSource">true</string>
    <string name="library_dotsindicator_repositoryLink">https://github.com/tommybuonomo/dotsindicator</string>


    <!-- CREATE LIB INFO FOR 'CircleProgressBar'-->

    <string name="define_CircleProgressBar"></string>
    <string name="library_CircleProgressBar_author">dinuscxj</string>
    <string name="library_CircleProgressBar_authorWebsite"></string>
    <string name="library_CircleProgressBar_libraryName">CircleProgressBar</string>
    <string name="library_CircleProgressBar_libraryDescription">A circular android ProgressBar library which extends View, and the usage same as ProgressBar, It has solid,line and solid_line three styles. Besides, progress value can be freely customized.</string>
    <string name="library_CircleProgressBar_libraryVersion">1.0.0</string>
    <string name="library_CircleProgressBar_libraryWebsite">https://github.com/dinuscxj/CircleProgressBar</string>
    <!-- Possible values right now: apache_2_0, mit, bsd_2, bsd_3 -->
    <string name="library_CircleProgressBar_licenseId">apache_2_0</string>
    <!-- you still can define the license within your library definition, but it is recommend to use the id -->
    <!-- possible fields for a custom license: *_licenseVersion, *_licenseLink, *_licenseContent -->
    <string name="library_CircleProgressBar_isOpenSource">true</string>
    <string name="library_CircleProgressBar_repositoryLink">https://github.com/dinuscxj/CircleProgressBar</string>


</resources>
